# car_lifes_cycle_hyperledger_fabric

./: .gitignore  .gitpod.yml  HYPERLEDGER-CONFIG.md  Makefile  README.md  build_env_file_for_rest_api.py  build_env_files.py  fablo-config-definitive.json  fablo-config-old.json  fablo-config.json
atena-frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json
atena-frontend/mock/: README.md  database.json
atena-frontend/public/: index.html  manifest.json
atena-frontend/src/: App.tsx  index.tsx
chaincodes/car-chaincode/: .gitignore  package-lock.json  package.json  tsconfig.json
chaincodes/car_ts/: .gitignore  package.json
chaincodes/chaincode-kv-node/: package-lock.json  package.json
chaincodes/fabcar-typescript/: package-lock.json  package.json
chaincodes/proj-ts/: package.json  (+2 more)
docs/: COMMANDS_MAKEFILE.md  DECISIONS.md  FRONTEND_PRINTS.md  HYPERLEDGER-CONFIG.md  LINKS.md  NOTES.md  PERFORMANCE-RESULT.md  PERFORMANCE_RESULT.md  performance-results.txt
mechanic-cli-typescript/: .gitignore  env.json
mechanic_cli/: package-lock.json  package.json  tsconfig.json
mechanic_cli_typescript/: env.json  package.json
performance_calculator/: pyproject.toml
performance_calculator/src/: base_talker.py  car_talker.py  cli_add_cars.py  main.py  make_performance_test.py
rest-api-typescript/: Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  env.json  package-lock.json  package.json  tsconfig.json
scripts/: .gitignore  env.json  package.json  tsconfig.json
zeus-middleware-api/: env.json  package-lock.json  package.json  test.ts
(+224 files in other folders)
