[tool.poetry]
name = "performance-calculator"
version = "0.1.0"
description = ""
authors = ["Yuri Hartmann <yurihartmann0607@gmail.com>"]
readme = "README.md"
packages = [{include = "performance_calculator"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
asyncer = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
